--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
+      <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
