--- a/index.html
+++ b/index.html
@@ -8,22 +8,12 @@
   <body>
     <body style="background-color:#234C72;">
       <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
+  <a href="#home" class="active">ABOUT</a>
+  <a href="#news">PLANT SEARCH</a>
+  <a href="#contact">PLANT DATABASE</a>
+  <a href="#contact">MyPlant</a>
   </div>
-  <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
       <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
