--- a/PlantSearch.html
+++ b/PlantSearch.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <meta charset="utf-8">
+    <title>EnvTech 2021</title>
+  </head>
+  <body>
+    <body style="background-color:#234C72;">
+      <div class="topnav" id="myTopnav">
+  <a href="#home" class="active">ABOUT</a>
+  <a href="#news">PLANT SEARCH</a>
+  <a href="#contact">PLANT DATABASE</a>
+  <a href="#contact">MyPlant</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
+      <script type="text/javascript" src="index.js"></script>
+  </body>
+</html>
