--- a/PlantSearch.html
+++ b/PlantSearch.html
@@ -8,8 +8,8 @@
   <body>
     <body style="background-color:#234C72;">
       <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">ABOUT</a>
-  <a href="#news">PLANT SEARCH</a>
+  <a href="index.html" >ABOUT</a>
+  <a href="#news"class="active">PLANT SEARCH</a>
   <a href="#contact">PLANT DATABASE</a>
   <a href="#contact">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
