--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <body style="background-color:#234C72;">
       <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">ABOUT</a>
-  <a href="#news">PLANT SEARCH</a>
-  <a href="#contact">PLANT DATABASE</a>
-  <a href="#contact">MyPlant</a>
+  <a href="index.html" class="active">ABOUT</a>
+  <a href="PlantSearch.html">PLANT SEARCH</a>
+  <a href="PlantDatabase.html">PLANT DATABASE</a>
+  <a href="MyPlant.html">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
       <script type="text/javascript" src="index.js"></script>
