--- a/PlantSearch.html
+++ b/PlantSearch.html
@@ -9,9 +9,9 @@
     <body style="background-color:#234C72;">
       <div class="topnav" id="myTopnav">
   <a href="index.html" >ABOUT</a>
-  <a href="#news"class="active">PLANT SEARCH</a>
-  <a href="#contact">PLANT DATABASE</a>
-  <a href="#contact">MyPlant</a>
+  <a href="PlantSearch.html"class="active">PLANT SEARCH</a>
+  <a href="PlantDatabase.html">PLANT DATABASE</a>
+  <a href="MyPlant.html">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
       <script type="text/javascript" src="index.js"></script>
