--- a/PlantDatabase.html
+++ b/PlantDatabase.html
@@ -15,6 +15,35 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
       <script type="text/javascript" src="index.js"></script>
+      
+      <table class="center">
+  <tr>
+    <th>Plant Name</th>
+    <th>Temperature</th>
+    <th>Light</th>
+    <th>pH</th>
+    <th>Water</th>
+    <th>Extra Info</th>
+  </tr>
+  <tr>
+    <td>Dracaena trifasciata </td>
+    <td>55-85 F</td>
+    <td>Keep hot and dry, but no direct sunlight Keep 10’ away from south or west window</td>
+    <td>Neutral 6 or 7</td>
+    <td>Water when soil is dry</td>
+    <td>Snake plant leaves turn yellow for two reasons: overwatering and too much direct sunlight</td>
+  </tr>
+
+  <tr>
+    <td>Gymnocalycium mihanovichii friedrichii </td>
+    <td>50-60 F</td>
+    <td>Bright but indirect sunlight</td>
+    <td>Slightly acidic 4 to 6.5</td>
+    <td>Water when soil is dry</td>
+    <td>After a year of growing no watering is needed during the winter season</td>
+  </tr>
+  
+</table>
   </body>
 </html>
 
