--- a/PlantSearch.html
+++ b/PlantSearch.html
@@ -6,7 +6,7 @@
     <title>EnvTech 2021</title>
   </head>
   <body>
-    <body style="background-color:#2e5cb8;">
+    <body style="background-color:#79a6d2;">
       <div class="topnav" id="myTopnav">
   <a href="index.html" >ABOUT</a>
   <a href="PlantSearch.html"class="active">PLANT SEARCH</a>
