--- a/PlantDatabase.html
+++ b/PlantDatabase.html
@@ -28,7 +28,7 @@
   <tr>
     <td>Dracaena trifasciata </td>
     <td>55-85 F</td>
-    <td>Keep hot and dry, but no direct sunlight Keep 10’ away from south or west window</td>
+    <td>Indirect sunlight. Keep hot and dry</td>
     <td>6 to 7</td>
     <td>Water when soil is dry</td>
     <td>Snake plant leaves turn yellow for two reasons: overwatering and too much direct sunlight</td>
