--- a/MyPlant.html
+++ b/MyPlant.html
@@ -8,9 +8,9 @@
   <body>
     <body style="background-color:#79a6d2;">
       <div class="topnav" id="myTopnav">
-  <a href="index.html" >ABOUT</a>
-  <a href="PlantSearch.html">PLANT SEARCH</a>
-  <a href="PlantDatabase.html">PLANT DATABASE</a>
+  <a href="index.html" >About</a>
+  <a href="PlantSearch.html">Plant Search</a>
+  <a href="PlantDatabase.html">Plant Database</a>
   <a href="MyPlant.html"class="active">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
