--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
       <script type="text/javascript" src="index.js"></script>
+      <img src="projectIgnitePic.png" alt="tempPic" width="500" height="600">
   </body>
 </html>
