--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
       <script type="text/javascript" src="index.js"></script>
-      <img src="projectIgnitePic.png" alt="tempPic" width="500" height="600">
+      <p>
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fprojectignitecmu.org%2F&psig=AOvVaw39OTKK3SxczLUkbgCfjL12&ust=1616511925494000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDX06yWxO8CFQAAAAAdAAAAABAD" alt="tempPic" width="500" height="600">
+      </p>
   </body>
 </html>
