--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a href="MyPlant.html">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
+  <img src="LaurBabyIsCuteAsHell.jpg" alt="place holder" width="400" height="300">
       <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
