--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <a href="MyPlant.html">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
-  <img src="LaurBabyIsCuteAsHell.jpg" alt="place holder" width="400" height="300">
+      <!-- idk mates i couldnt get a pic to show up-->
+      <img src="LaurBabyIsCuteAsHell.jpg" alt="place holder" width="400" height="300"> 
       <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
