--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
       <!-- idk mates i couldnt get a pic to show up also i added some stuff to plant database but honestly had less time than i thot this week the borders werent working out too good w da plant database but i can figure that out later-->
-      <img src="LaurBabyIsCuteAsHell.jpg" alt="place holder" width="400" height="300"> 
+      <img src="LaurBabyIsCuteAsHell.jpg" alt="place holder" width="400" height="300"/> 
       <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
