--- a/PlantSearch.html
+++ b/PlantSearch.html
@@ -16,7 +16,7 @@
   </div>
       .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: #363738;
 }
 .topnav a {
   float: left;
