--- a/PlantSearch.html
+++ b/PlantSearch.html
@@ -56,6 +56,7 @@ topnav a:hover {
     border: 1px solid #ccc;
   }
 }
+      </div>
       <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
