--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <a href="MyPlant.html">MyPlant</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
+      <h2>Our Mission</h2>
+      <p>The goal of this sensor project is to create an easier way for people to keep plants alive and healthy. It can be difficult to understand why a plant is not living to its full potential, but with our sensor the process is easy and simplified. </p>
       <!-- idk mates i couldnt get a pic to show up also i added some stuff to plant database but honestly had less time than i thot this week the borders werent working out too good w da plant database but i can figure that out later-->
       <img src="LaurBabyIsCuteAsHell.jpeg" alt="laurbaby" width="500" height="400"/> 
       <script type="text/javascript" src="index.js"></script>
